# numba-ufunc-hooks

./: LICENSE  README.rst  pyproject.toml  tbump.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/source/: changelog.rst
src/numba_ufunc_hooks/: __init__.py  fft.py  ufunc_minimal.py
tests/: test_ufunc.py
